AC-536 No longer dissaociating hosts from /inventories/N/groups, so no more cases where dragging-n-dropping groups results in lost hosts.  Fixed tree styling to better align nodes.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -1060,7 +1060,7 @@ input[type="checkbox"].checkbox-no-label {
 
     ul {
       list-style-type: none;
-      padding-left: 16px;
+      padding-left: 15px;
     }
   
     .tree-root {
@@ -1105,13 +1105,14 @@ input[type="checkbox"].checkbox-no-label {
 
     .expand-container {
       width: 14px;
-      text-align: center;
+      text-align: left;
     }
 
     .badge-container {
       vertical-align: none;
       padding-top: 2px;
       padding-bottom: 2px;
+      margin-left: 3px;
     }
 
     #root-badge-container {
